--- a/index.html
+++ b/index.html
@@ -1784,13 +1784,13 @@
                       <div class="art-table p-15-15">
                         <ul>
                           <li>
-                            <h6>Email:</h6><span>carter.inbox@mail.com</span>
+                            <h6>Email:</h6><span>cyberworld.rishi@gmail.com</span>
                           </li>
                           <li>
-                            <h6>Telegram:</h6><span>@arter</span>
+                            <h6>Instagram:</h6><span>@cybergyan.onic</span>
                           </li>
                           <li>
-                            <h6>Skype:</h6><span>Arter</span>
+                            <h6>Admin Email:</h6><span>admin@cyber-gyan.me</span>
                           </li>
                         </ul>
                       </div>
@@ -1805,13 +1805,13 @@
                       <div class="art-table p-15-15">
                         <ul>
                           <li>
-                            <h6>Support service:</h6><span>+78 (098) 333 11 22</span>
+                            <h6>Support service:</h6><span>updated soon</span>
                           </li>
                           <li>
-                            <h6>Office:</h6><span>+78 (098) 326 11 22</span>
+                            <h6>Office:</h6><span>updated soon</span>
                           </li>
                           <li>
-                            <h6>Personal:</h6><span>+78 (077) 114 26 53</span>
+                            <h6>Personal:</h6><span>updated soon</span>
                           </li>
                         </ul>
                       </div>
@@ -1931,9 +1931,8 @@
                 <!-- footer -->
                 <footer>
                   <!-- copyright -->
-                  <div>© 2020 Artur Carter</div>
+                  <div>© 2022 cyber World</div>
                   <!-- author ( Please! Do not delete it. You are awesome! :) -->
-                  <div>Template author:&#160; <a href="https://themeforest.net/user/millerdigitaldesign" target="_blank">Nazar Miller</a></div>
                 </footer>
                 <!-- footer end -->
 
@@ -1960,7 +1959,7 @@
       <!-- preloader content -->
       <div class="art-preloader-content">
         <!-- title -->
-        <h4>Artur Carter</h4>
+        <h4>Cyber Gyan</h4>
         <!-- progressbar -->
         <div id="preloader" class="art-preloader-load"></div>
       </div>
