--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                 <div class="art-lang-skills-item">
                   <div id="circleprog3" class="art-cirkle-progress"></div>
                   <!-- title -->
-                  <h6>Bhojpuri</h6>
+                  <h6>Maithili</h6>
                 </div>
                 <!-- skill end -->
 
